add 2 timeline plots and choropleth

--- a/Week_47_Discounts/EDA.ipynb
+++ b/Week_47_Discounts/EDA.ipynb
@@ -13,48 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "574d1c55",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr,\n",
-       ".dataframe > tbody > tr {\n",
-       "  text-align: right;\n",
-       "  white-space: pre-wrap;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (42_989, 6)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>DATE</th><th>PRODUCT</th><th>COST</th><th>PROFIT</th><th>COUNTRY</th><th>SEGMENT</th></tr><tr><td>date</td><td>str</td><td>f32</td><td>f32</td><td>cat</td><td>cat</td></tr></thead><tbody><tr><td>2017-01-01</td><td>&quot;OFF-ST-6261&quot;</td><td>408.299988</td><td>106.139999</td><td>&quot;South Africa&quot;</td><td>&quot;Consumer&quot;</td></tr><tr><td>2017-01-01</td><td>&quot;OFF-SU-3002&quot;</td><td>120.365997</td><td>36.035999</td><td>&quot;Australia&quot;</td><td>&quot;Consumer&quot;</td></tr><tr><td>2017-01-01</td><td>&quot;FUR-FU-4075&quot;</td><td>113.669998</td><td>37.77</td><td>&quot;Australia&quot;</td><td>&quot;Consumer&quot;</td></tr><tr><td>2017-01-01</td><td>&quot;OFF-PA-3990&quot;</td><td>55.242001</td><td>15.342</td><td>&quot;Australia&quot;</td><td>&quot;Consumer&quot;</td></tr><tr><td>2017-01-01</td><td>&quot;OFF-ST-6230&quot;</td><td>66.120003</td><td>29.639999</td><td>&quot;United Kingdom&quot;</td><td>&quot;Consumer&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>2020-08-24</td><td>&quot;TEC-PH-5817&quot;</td><td>4367.895996</td><td>327.592194</td><td>&quot;Pakistan&quot;</td><td>&quot;Consumer&quot;</td></tr><tr><td>2020-08-24</td><td>&quot;OFF-AP-4240&quot;</td><td>161.376007</td><td>12.1032</td><td>&quot;Pakistan&quot;</td><td>&quot;Consumer&quot;</td></tr><tr><td>2020-08-24</td><td>&quot;OFF-PA-4838&quot;</td><td>49.568001</td><td>15.49</td><td>&quot;Pakistan&quot;</td><td>&quot;Consumer&quot;</td></tr><tr><td>2020-08-24</td><td>&quot;OFF-PA-3113&quot;</td><td>8.72</td><td>2.943</td><td>&quot;Pakistan&quot;</td><td>&quot;Consumer&quot;</td></tr><tr><td>2020-08-24</td><td>&quot;FUR-FU-4092&quot;</td><td>2.784</td><td>0.4176</td><td>&quot;Pakistan&quot;</td><td>&quot;Consumer&quot;</td></tr></tbody></table></div>"
-      ],
-      "text/plain": [
-       "shape: (42_989, 6)\n",
-       "┌────────────┬─────────────┬─────────────┬────────────┬────────────────┬──────────┐\n",
-       "│ DATE       ┆ PRODUCT     ┆ COST        ┆ PROFIT     ┆ COUNTRY        ┆ SEGMENT  │\n",
-       "│ ---        ┆ ---         ┆ ---         ┆ ---        ┆ ---            ┆ ---      │\n",
-       "│ date       ┆ str         ┆ f32         ┆ f32        ┆ cat            ┆ cat      │\n",
-       "╞════════════╪═════════════╪═════════════╪════════════╪════════════════╪══════════╡\n",
-       "│ 2017-01-01 ┆ OFF-ST-6261 ┆ 408.299988  ┆ 106.139999 ┆ South Africa   ┆ Consumer │\n",
-       "│ 2017-01-01 ┆ OFF-SU-3002 ┆ 120.365997  ┆ 36.035999  ┆ Australia      ┆ Consumer │\n",
-       "│ 2017-01-01 ┆ FUR-FU-4075 ┆ 113.669998  ┆ 37.77      ┆ Australia      ┆ Consumer │\n",
-       "│ 2017-01-01 ┆ OFF-PA-3990 ┆ 55.242001   ┆ 15.342     ┆ Australia      ┆ Consumer │\n",
-       "│ 2017-01-01 ┆ OFF-ST-6230 ┆ 66.120003   ┆ 29.639999  ┆ United Kingdom ┆ Consumer │\n",
-       "│ …          ┆ …           ┆ …           ┆ …          ┆ …              ┆ …        │\n",
-       "│ 2020-08-24 ┆ TEC-PH-5817 ┆ 4367.895996 ┆ 327.592194 ┆ Pakistan       ┆ Consumer │\n",
-       "│ 2020-08-24 ┆ OFF-AP-4240 ┆ 161.376007  ┆ 12.1032    ┆ Pakistan       ┆ Consumer │\n",
-       "│ 2020-08-24 ┆ OFF-PA-4838 ┆ 49.568001   ┆ 15.49      ┆ Pakistan       ┆ Consumer │\n",
-       "│ 2020-08-24 ┆ OFF-PA-3113 ┆ 8.72        ┆ 2.943      ┆ Pakistan       ┆ Consumer │\n",
-       "│ 2020-08-24 ┆ FUR-FU-4092 ┆ 2.784       ┆ 0.4176     ┆ Pakistan       ┆ Consumer │\n",
-       "└────────────┴─────────────┴─────────────┴────────────┴────────────────┴──────────┘"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import polars as pl\n",
     "df = (\n",
@@ -82,11 +44,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "19466624",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape: (26, 2)\n",
+      "┌──────────────────────┬───────┐\n",
+      "│ COUNTRY              ┆ ISO-3 │\n",
+      "│ ---                  ┆ ---   │\n",
+      "│ str                  ┆ str   │\n",
+      "╞══════════════════════╪═══════╡\n",
+      "│ Afghanistan          ┆ AFG   │\n",
+      "│ Argentina            ┆ ARG   │\n",
+      "│ Australia            ┆ AUS   │\n",
+      "│ Austria              ┆ AUT   │\n",
+      "│ Azerbaijan           ┆ AZE   │\n",
+      "│ …                    ┆ …     │\n",
+      "│ Sri Lanka            ┆ LKA   │\n",
+      "│ Switzerland          ┆ CHE   │\n",
+      "│ United Arab Emirates ┆ ARE   │\n",
+      "│ United Kingdom       ┆ GBR   │\n",
+      "│ United States        ┆ USA   │\n",
+      "└──────────────────────┴───────┘\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pycountry\n",
+    "import polars as pl\n",
+    "countries= [\n",
+    "    'Afghanistan', 'Argentina', 'Australia', 'Austria', 'Azerbaijan', \n",
+    "    'Bangladesh', 'Brazil', 'Canada', 'China', 'Colombia', 'Denmark', \n",
+    "    'Finland', 'France', 'India', 'Iran', 'New Zealand', 'Norway', 'Pakistan', \n",
+    "    'Russian Federation', 'Saudi Arabia', 'South Africa', 'Sri Lanka', 'Switzerland', \n",
+    "    'United Arab Emirates', 'United Kingdom', 'United States'\n",
+    "]\n",
+    "iso_codes = [pycountry.countries.lookup(c).alpha_3 for c in countries]\n",
+    " \n",
+    "df_iso = (   # join this with main df to get ISO-3 codes for each country\n",
+    "    pl.DataFrame({\n",
+    "        'COUNTRY': countries,\n",
+    "        'ISO-3': iso_codes\n",
+    "    })\n",
+    ")\n",
+    "print(df_iso)\n"
+   ]
   }
  ],
  "metadata": {
