week 51: add filter requiring 2 uppercase letters for each state

--- a/Week_51_Shelter_Dogs/EDA.ipynb
+++ b/Week_51_Shelter_Dogs/EDA.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "c70a5554",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "c1eb801b",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "6119fd9b",
    "metadata": {},
    "outputs": [
@@ -47,27 +47,27 @@
      "output_type": "stream",
      "text": [
       "******************** Reading allDogDescriptions.parquet  ********************\n",
-      "(58180, 16)\n",
+      "(58147, 16)\n",
       "['ID', 'ORG_ID', 'BREED_PRIMARY', 'BREED_MIXED', 'AGE', 'SEX', 'SIZE', 'FIXED']\n",
       "['HOUSE_TRAINED', 'SHOTS_CURRENT', 'NAME', 'DATE', 'TIME', 'CONTACT_CITY', 'CONTACT_STATE', 'CONTACT_ZIP']\n",
       "Rows: 10\n",
       "Columns: 16\n",
-      "$ ID             <u32> 45503999, 45969688, 46009318, 44503481, 44996021, 44756358, 42235297, 39352398, 41693397, 45683208\n",
-      "$ ORG_ID         <str> 'KY105', 'SC411', 'CO125', 'NJ545', 'OK51', 'VA465', 'TN544', 'RI113', 'OK279', 'FL164'\n",
-      "$ BREED_PRIMARY  <str> 'Coonhound', 'Dachshund', 'Pit Bull Terrier', 'Greater Swiss Mountain Dog', 'Labrador Retriever', 'Labrador Retriever', 'Boston Terrier', 'American Staffordshire Terrier', 'Hound', 'American Bulldog'\n",
-      "$ BREED_MIXED   <bool> False, True, True, True, True, True, True, True, False, True\n",
-      "$ AGE           <enum> Adult, Baby, Young, Adult, Young, Adult, Adult, Adult, Baby, Young\n",
-      "$ SEX           <enum> Female, Female, Female, Male, Male, Male, Female, Female, Male, Female\n",
-      "$ SIZE          <enum> Medium, Small, Medium, Large, Large, Medium, Medium, Medium, Medium, Large\n",
-      "$ FIXED         <bool> True, False, True, True, True, False, True, True, True, True\n",
-      "$ HOUSE_TRAINED <bool> True, False, False, False, False, True, True, True, True, False\n",
-      "$ SHOTS_CURRENT <bool> True, True, False, False, True, False, True, True, True, False\n",
-      "$ NAME           <str> 'Emma And Ruby', 'Moxie', 'Latte', 'Boomer', 'Denali', 'Winston', 'Shelby', 'Molly', 'Bristol', 'Meryl'\n",
-      "$ DATE          <date> 2019-08-05, 2019-09-14, 2019-09-17, 2019-04-19, 2019-06-16, 2019-05-22, 2018-07-20, 2017-09-11, 2018-05-22, 2019-08-20\n",
-      "$ TIME          <time> 10:46:27, 05:26:15, 16:10:43, 17:52:08, 07:14:55, 02:13:27, 13:18:06, 17:11:00, 13:46:37, 15:38:14\n",
-      "$ CONTACT_CITY   <str> 'Louisville', 'Aiken', 'Colorado Springs', 'Hewitt', 'Ponca City', 'Charlottesville', 'Nashville', 'Cumberland', 'Tuttle', 'Gainesville'\n",
-      "$ CONTACT_STATE  <str> 'KY', 'SC', 'CO', 'NJ', 'OK', 'VA', 'TN', 'RI', 'OK', 'FL'\n",
-      "$ CONTACT_ZIP    <u32> 40224, 29803, 80905, 7421, 74604, 22905, 37206, 2864, 73089, 32609\n",
+      "$ ID             <u32> 45931291, 45823525, 44361319, 45641425, 44518562, 39813087, 44349910, 45482007, 36709140, 45983715\n",
+      "$ ORG_ID         <str> 'NH74', 'GA66', 'TX920', 'NJ593', 'FL134', 'LA131', 'NC583', 'PA884', 'NM121', 'DC20'\n",
+      "$ BREED_PRIMARY  <str> 'Rottweiler', 'Mixed Breed', 'Great Pyrenees', 'Jack Russell Terrier', 'Dachshund', 'Labrador Retriever', 'Vizsla', 'Hound', 'Basset Hound', 'Shepherd'\n",
+      "$ BREED_MIXED   <bool> False, False, False, True, True, True, True, True, True, True\n",
+      "$ AGE           <enum> Adult, Young, Young, Adult, Young, Baby, Adult, Young, Senior, Baby\n",
+      "$ SEX           <enum> Female, Male, Female, Male, Male, Male, Male, Female, Female, Male\n",
+      "$ SIZE          <enum> Large, Medium, Large, Small, Small, Medium, Large, Large, Large, Medium\n",
+      "$ FIXED         <bool> True, False, True, False, True, False, True, True, True, False\n",
+      "$ HOUSE_TRAINED <bool> True, False, True, False, True, False, True, False, True, False\n",
+      "$ SHOTS_CURRENT <bool> True, True, False, True, True, True, True, True, True, True\n",
+      "$ NAME           <str> 'Rose', 'David', 'Spring', 'Donald - Independent Cutie!', 'Parzival', 'Batman', 'Cole', 'Marley', 'Lena', 'Orbit'\n",
+      "$ DATE          <date> 2019-09-10, 2019-08-31, 2019-04-01, 2019-08-16, 2019-04-22, 2017-11-02, 2019-03-30, 2019-08-02, 2016-11-11, 2019-09-16\n",
+      "$ TIME          <time> 20:05:54, 10:46:47, 04:43:24, 18:22:06, 07:57:59, 19:52:19, 12:08:34, 21:08:28, 00:41:42, 01:52:46\n",
+      "$ CONTACT_CITY   <str> 'Hillsboro', 'Albany', 'Woodinville', 'Edison', 'Jacksonville', 'Roseland', 'TROUTMAN', 'Shamokin', 'Albuquerque', 'Washington'\n",
+      "$ CONTACT_STATE  <str> 'NH', 'GA', 'WA', 'NJ', 'FL', 'LA', 'NC', 'PA', 'NM', 'DC'\n",
+      "$ CONTACT_ZIP    <u32> 3244, 31706, 98077, 8817, 33777, 70456, 28166, 17872, 87109, 20007\n",
       "\n",
       "None\n"
      ]
@@ -95,15 +95,18 @@
     "            HOUSE_TRAINED = pl.col('house_trained'),\n",
     "            SHOTS_CURRENT = pl.col('shots_current'),\n",
     "            NAME = pl.col('name').str.strip_chars().str.to_titlecase(),\n",
-    "            DATE = pl.col('posted')\n",
+    "            DATE = pl.col('posted')   # regex for dates formatted as YYYY-MM-DD\n",
     "                .str.extract(r'(\\d{4}-\\d{2}-\\d{2})', group_index=1)\n",
     "                .str.to_date('%Y-%m-%d'),\n",
-    "            TIME = pl.col('posted')\n",
+    "            TIME = pl.col('posted')   # regex for time formatted as HH:MM:SS\n",
     "                .str.extract(r'(\\d{2}:\\d{2}:\\d{2})', group_index=1)\n",
     "                .str.to_time('%H:%M:%S'),\n",
     "            CONTACT_CITY = pl.col('contact_city'),\n",
     "            CONTACT_STATE = pl.col('contact_state'),\n",
     "            CONTACT_ZIP = pl.col('contact_zip').cast(pl.UInt32),\n",
+    "        )\n",
+    "        .filter(  # regex to accept states comprised of 2 uppercase letters    \n",
+    "            pl.col('CONTACT_STATE').str.contains(r'^[A-Z]{2}$')\n",
     "        )\n",
     "    )\n",
     "    df.write_parquet(root_file + '.parquet')\n",
