week 51 app.py under development, 33%

--- a/Week_51_Shelter_Dogs/EDA.ipynb
+++ b/Week_51_Shelter_Dogs/EDA.ipynb
@@ -5,15 +5,12 @@
    "id": "db03ef7f",
    "metadata": {},
    "source": [
-    "## Sales/Discounts by country, segement\n",
-    "Make a timeline plot of sales activity\n",
-    "groupby country or market segment\n",
-    "draw a line plot of cumulative sales by selected country or market segment\n"
+    "## Shelter Animal Analytics Dashboard\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c70a5554",
    "metadata": {},
    "outputs": [],
@@ -25,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c1eb801b",
    "metadata": {},
    "outputs": [],
@@ -38,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "6119fd9b",
    "metadata": {},
    "outputs": [
@@ -52,22 +49,22 @@
       "['HOUSE_TRAINED', 'SHOTS_CURRENT', 'NAME', 'DATE', 'TIME', 'CONTACT_CITY', 'CONTACT_STATE', 'CONTACT_ZIP']\n",
       "Rows: 10\n",
       "Columns: 16\n",
-      "$ ID             <u32> 45931291, 45823525, 44361319, 45641425, 44518562, 39813087, 44349910, 45482007, 36709140, 45983715\n",
-      "$ ORG_ID         <str> 'NH74', 'GA66', 'TX920', 'NJ593', 'FL134', 'LA131', 'NC583', 'PA884', 'NM121', 'DC20'\n",
-      "$ BREED_PRIMARY  <str> 'Rottweiler', 'Mixed Breed', 'Great Pyrenees', 'Jack Russell Terrier', 'Dachshund', 'Labrador Retriever', 'Vizsla', 'Hound', 'Basset Hound', 'Shepherd'\n",
-      "$ BREED_MIXED   <bool> False, False, False, True, True, True, True, True, True, True\n",
-      "$ AGE           <enum> Adult, Young, Young, Adult, Young, Baby, Adult, Young, Senior, Baby\n",
-      "$ SEX           <enum> Female, Male, Female, Male, Male, Male, Male, Female, Female, Male\n",
-      "$ SIZE          <enum> Large, Medium, Large, Small, Small, Medium, Large, Large, Large, Medium\n",
-      "$ FIXED         <bool> True, False, True, False, True, False, True, True, True, False\n",
-      "$ HOUSE_TRAINED <bool> True, False, True, False, True, False, True, False, True, False\n",
-      "$ SHOTS_CURRENT <bool> True, True, False, True, True, True, True, True, True, True\n",
-      "$ NAME           <str> 'Rose', 'David', 'Spring', 'Donald - Independent Cutie!', 'Parzival', 'Batman', 'Cole', 'Marley', 'Lena', 'Orbit'\n",
-      "$ DATE          <date> 2019-09-10, 2019-08-31, 2019-04-01, 2019-08-16, 2019-04-22, 2017-11-02, 2019-03-30, 2019-08-02, 2016-11-11, 2019-09-16\n",
-      "$ TIME          <time> 20:05:54, 10:46:47, 04:43:24, 18:22:06, 07:57:59, 19:52:19, 12:08:34, 21:08:28, 00:41:42, 01:52:46\n",
-      "$ CONTACT_CITY   <str> 'Hillsboro', 'Albany', 'Woodinville', 'Edison', 'Jacksonville', 'Roseland', 'TROUTMAN', 'Shamokin', 'Albuquerque', 'Washington'\n",
-      "$ CONTACT_STATE  <str> 'NH', 'GA', 'WA', 'NJ', 'FL', 'LA', 'NC', 'PA', 'NM', 'DC'\n",
-      "$ CONTACT_ZIP    <u32> 3244, 31706, 98077, 8817, 33777, 70456, 28166, 17872, 87109, 20007\n",
+      "$ ID             <u32> 46035228, 44877246, 45675961, 45887666, 45977846, 45866695, 45730185, 45945695, 42774946, 46009729\n",
+      "$ ORG_ID         <str> 'KY18', 'VA56', 'PA218', 'GA257', 'DE15', 'VA126', 'CO451', 'MA424', 'NV204', 'OK71'\n",
+      "$ BREED_PRIMARY  <str> 'Hound', 'Pit Bull Terrier', 'Treeing Walker Coonhound', 'Rottweiler', 'Beagle', 'Pointer', 'Chihuahua', 'Treeing Walker Coonhound', 'Chihuahua', 'Jack Russell Terrier'\n",
+      "$ BREED_MIXED   <bool> True, False, True, True, False, True, True, False, False, True\n",
+      "$ AGE           <enum> Baby, Young, Adult, Adult, Adult, Adult, Baby, Young, Adult, Young\n",
+      "$ SEX           <enum> Male, Male, Male, Male, Female, Female, Female, Female, Male, Male\n",
+      "$ SIZE          <enum> Small, Large, Medium, Large, Medium, Medium, Small, Medium, Small, Small\n",
+      "$ FIXED         <bool> False, True, False, True, True, False, True, True, True, False\n",
+      "$ HOUSE_TRAINED <bool> False, False, False, False, False, True, False, False, True, False\n",
+      "$ SHOTS_CURRENT <bool> False, True, True, False, True, False, True, True, True, True\n",
+      "$ NAME           <str> 'Leo', 'Briscoe', 'Homer', 'Zack', 'Suzie', 'Nina Simone', 'Honey', 'Maggie Jo', 'Beanie', 'Jr'\n",
+      "$ DATE          <date> 2019-09-19, 2019-06-04, 2019-08-19, 2019-09-06, 2019-09-15, 2019-09-04, 2019-08-24, 2019-09-12, 2018-09-16, 2019-09-17\n",
+      "$ TIME          <time> 21:06:50, 19:35:06, 22:13:27, 16:29:43, 06:30:26, 23:15:42, 08:55:33, 00:51:54, 20:45:49, 17:21:41\n",
+      "$ CONTACT_CITY   <str> 'Bowling Green', 'Fairfax Station', 'Clearfield', 'Appling', 'Newark', 'Richmond', 'Littleton', 'Lexington', 'Las Vegas', 'Okmulgee'\n",
+      "$ CONTACT_STATE  <str> 'KY', 'VA', 'PA', 'GA', 'DE', 'VA', 'CO', 'MA', 'NV', 'OK'\n",
+      "$ CONTACT_ZIP    <u32> 42102, 22039, 16830, 30802, 19713, 23224, 80126, 2420, 89139, 74447\n",
       "\n",
       "None\n"
      ]
