week 51: add timeline plot

--- a/Week_51_Shelter_Dogs/EDA.ipynb
+++ b/Week_51_Shelter_Dogs/EDA.ipynb
@@ -49,22 +49,22 @@
       "['HOUSE_TRAINED', 'SHOTS_CURRENT', 'NAME', 'DATE', 'TIME', 'CONTACT_CITY', 'CONTACT_STATE', 'CONTACT_ZIP']\n",
       "Rows: 10\n",
       "Columns: 16\n",
-      "$ ID             <u32> 46035228, 44877246, 45675961, 45887666, 45977846, 45866695, 45730185, 45945695, 42774946, 46009729\n",
-      "$ ORG_ID         <str> 'KY18', 'VA56', 'PA218', 'GA257', 'DE15', 'VA126', 'CO451', 'MA424', 'NV204', 'OK71'\n",
-      "$ BREED_PRIMARY  <str> 'Hound', 'Pit Bull Terrier', 'Treeing Walker Coonhound', 'Rottweiler', 'Beagle', 'Pointer', 'Chihuahua', 'Treeing Walker Coonhound', 'Chihuahua', 'Jack Russell Terrier'\n",
-      "$ BREED_MIXED   <bool> True, False, True, True, False, True, True, False, False, True\n",
-      "$ AGE           <enum> Baby, Young, Adult, Adult, Adult, Adult, Baby, Young, Adult, Young\n",
-      "$ SEX           <enum> Male, Male, Male, Male, Female, Female, Female, Female, Male, Male\n",
-      "$ SIZE          <enum> Small, Large, Medium, Large, Medium, Medium, Small, Medium, Small, Small\n",
-      "$ FIXED         <bool> False, True, False, True, True, False, True, True, True, False\n",
-      "$ HOUSE_TRAINED <bool> False, False, False, False, False, True, False, False, True, False\n",
-      "$ SHOTS_CURRENT <bool> False, True, True, False, True, False, True, True, True, True\n",
-      "$ NAME           <str> 'Leo', 'Briscoe', 'Homer', 'Zack', 'Suzie', 'Nina Simone', 'Honey', 'Maggie Jo', 'Beanie', 'Jr'\n",
-      "$ DATE          <date> 2019-09-19, 2019-06-04, 2019-08-19, 2019-09-06, 2019-09-15, 2019-09-04, 2019-08-24, 2019-09-12, 2018-09-16, 2019-09-17\n",
-      "$ TIME          <time> 21:06:50, 19:35:06, 22:13:27, 16:29:43, 06:30:26, 23:15:42, 08:55:33, 00:51:54, 20:45:49, 17:21:41\n",
-      "$ CONTACT_CITY   <str> 'Bowling Green', 'Fairfax Station', 'Clearfield', 'Appling', 'Newark', 'Richmond', 'Littleton', 'Lexington', 'Las Vegas', 'Okmulgee'\n",
-      "$ CONTACT_STATE  <str> 'KY', 'VA', 'PA', 'GA', 'DE', 'VA', 'CO', 'MA', 'NV', 'OK'\n",
-      "$ CONTACT_ZIP    <u32> 42102, 22039, 16830, 30802, 19713, 23224, 80126, 2420, 89139, 74447\n",
+      "$ ID             <u32> 45910484, 43419415, 45541863, 45880818, 45510835, 45746283, 46036509, 44240879, 42321698, 45227194\n",
+      "$ ORG_ID         <str> 'PA142', 'NM160', 'GA644', 'AL211', 'MI921', 'IN32', 'NM13', 'OK474', 'NC871', 'CT258'\n",
+      "$ BREED_PRIMARY  <str> 'Pit Bull Terrier', 'Chihuahua', 'Chihuahua', 'Dachshund', 'Miniature Pinscher', 'Pit Bull Terrier', 'Australian Cattle Dog / Blue Heeler', 'Shepherd', 'Pit Bull Terrier', 'Hound'\n",
+      "$ BREED_MIXED   <bool> False, False, True, True, True, False, True, True, True, True\n",
+      "$ AGE           <enum> Young, Baby, Young, Baby, Baby, Adult, Young, Adult, Adult, Young\n",
+      "$ SEX           <enum> Female, Female, Female, Male, Female, Female, Male, Female, Male, Male\n",
+      "$ SIZE          <enum> Medium, Medium, Small, Medium, Small, Medium, Medium, Large, Medium, Medium\n",
+      "$ FIXED         <bool> True, True, True, True, True, True, False, True, True, True\n",
+      "$ HOUSE_TRAINED <bool> False, False, True, False, True, False, False, True, True, False\n",
+      "$ SHOTS_CURRENT <bool> True, True, True, True, True, True, False, True, True, True\n",
+      "$ NAME           <str> 'Bonnie', 'Kat', 'Jett &Amp; Poncho', 'Bryant', 'Lainey', 'Rylee', 'Czar', 'Mabel', 'Spanky', 'Rudolph'\n",
+      "$ DATE          <date> 2019-09-09, 2018-11-30, 2019-08-08, 2019-09-05, 2019-08-05, 2019-08-26, 2019-09-19, 2019-03-16, 2018-07-28, 2019-07-11\n",
+      "$ TIME          <time> 00:48:05, 18:24:58, 15:43:25, 23:23:49, 22:45:23, 12:44:03, 23:18:27, 02:12:37, 21:17:10, 14:26:00\n",
+      "$ CONTACT_CITY   <str> 'York', 'Albuquerque', 'Atlanta', 'West Paterson', 'Bay City', 'Martinsville', 'Albuquerque', 'Bixby', 'Albemarle', 'Bloomfield'\n",
+      "$ CONTACT_STATE  <str> 'PA', 'NM', 'GA', 'NJ', 'MI', 'IN', 'NM', 'OK', 'NC', 'CT'\n",
+      "$ CONTACT_ZIP    <u32> 17406, 87199, 31141, 7424, 48707, 46151, 87112, 74008, 28001, 6002\n",
       "\n",
       "None\n"
      ]
@@ -114,6 +114,86 @@
     "\n",
     "print(df.sample(10).glimpse())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a386c164",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows: 5\n",
+      "Columns: 16\n",
+      "$ ID             <u32> 45947366, 45619199, 35672471, 45801517, 45905429\n",
+      "$ ORG_ID         <str> 'WV28', 'FL1026', 'NY816', 'SC170', 'CT523'\n",
+      "$ BREED_PRIMARY  <str> 'Black and Tan Coonhound', 'Miniature Pinscher', 'Pit Bull Terrier', 'American Staffordshire Terrier', 'Beagle'\n",
+      "$ BREED_MIXED   <bool> False, True, False, False, True\n",
+      "$ AGE           <enum> Young, Young, Senior, Adult, Adult\n",
+      "$ SEX           <enum> Male, Male, Female, Male, Female\n",
+      "$ SIZE          <enum> Large, Small, Large, Medium, Medium\n",
+      "$ FIXED         <bool> False, True, True, True, False\n",
+      "$ HOUSE_TRAINED <bool> False, False, True, False, False\n",
+      "$ SHOTS_CURRENT <bool> True, True, True, True, False\n",
+      "$ NAME           <str> 'Mally', 'Zeus', 'Rosie', 'Chase', 'Abigail'\n",
+      "$ DATE          <date> 2019-09-12, 2019-08-15, 2016-07-15, 2019-08-30, 2019-09-08\n",
+      "$ TIME          <time> 06:30:46, 01:19:09, 05:22:01, 21:28:34, 11:09:06\n",
+      "$ CONTACT_CITY   <str> 'Parkersburg', 'Tavares', 'Lake Ronkonkoma', 'Darlington', 'Bloomfield'\n",
+      "$ CONTACT_STATE  <str> 'WV', 'FL', 'NY', 'SC', 'CT'\n",
+      "$ CONTACT_ZIP    <u32> 26101, 32778, 11779, 29532, 6002\n",
+      "\n",
+      "None\n",
+      "type(df_time) = <class 'polars.dataframe.frame.DataFrame'>\n",
+      "shape: (161, 2)\n",
+      "┌────────────┬───────────┐\n",
+      "│ DATE       ┆ Dog Count │\n",
+      "│ ---        ┆ ---       │\n",
+      "│ date       ┆ u32       │\n",
+      "╞════════════╪═══════════╡\n",
+      "│ 2003-05-01 ┆ 1         │\n",
+      "│ 2004-02-01 ┆ 2         │\n",
+      "│ 2005-05-01 ┆ 1         │\n",
+      "│ 2005-09-01 ┆ 1         │\n",
+      "│ 2005-10-01 ┆ 2         │\n",
+      "│ …          ┆ …         │\n",
+      "│ 2019-05-01 ┆ 2365      │\n",
+      "│ 2019-06-01 ┆ 2948      │\n",
+      "│ 2019-07-01 ┆ 5613      │\n",
+      "│ 2019-08-01 ┆ 11873     │\n",
+      "│ 2019-09-01 ┆ 20252     │\n",
+      "└────────────┴───────────┘\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.sample(5).glimpse())\n",
+    "df_time = (\n",
+    "    df\n",
+    "    .sort('DATE')\n",
+    "    .group_by_dynamic(\n",
+    "        index_column='DATE',  # specify the datetime column\n",
+    "        every='1mo',          # interval size\n",
+    "        period='1mo',         # window size\n",
+    "        closed='left'         # interval includes the left endpoint\n",
+    "    )\n",
+    "    .agg(pl.col('ID').count().alias('Dog Count'))   \n",
+    "                                    \n",
+    "    # ())# .alias('Dog Count'))\n",
+    "    # .sort('DATE')\n",
+    ")\n",
+    "print(f'{type(df_time) = }')\n",
+    "print(df_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e11c5745",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
